# pscomp

./: .gitignore  README.md  builtin_syms.py  compiler.py  lexer.py  logger.py  main.py  parser_.py  pyproject.toml  source.py  typer.py
src/pscomp/: __init__.py  __main__.py  builtin_syms.py  builtins.py  compiler.py  errors.py  lexer.py  logger.py  parser.py  source.py  typer.py  types.py
