[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pscomp"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
  {name = "Zacharie DUBRULLE", email = "dubrullezacharie@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
pscomp = "pscomp:main"